<resources>

    <!--  Meta  -->
    <string name="app_name">Entropy</string>

    <!--  Login -->
    <string name="lbl_sign_in">Sign In</string>

    <!--  Login Providers  -->
    <string name="lbl_apple">Apple</string>
    <string name="lbl_microsoft">Microsoft</string>
    <string name="lbl_twitter">Twitter</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_google">Google</string>

    <!--  Main  -->
    <string name="lbl_topic">Topic:</string>
    <string name="lbl_message">Message</string>

    <!--  Menu  -->
    <string name="lbl_settings">Settings</string>
    <string name="lbl_show_pins">Show Pins</string>
    <string name="lbl_about">About</string>

    <!--  Preferences Titles -->
    <string name="lbl_log_out">Log Out</string>
    <string name="lbl_theme">Theme</string>

    <!--  Preference Keys  -->
    <string name="key_theme">key_theme</string>
    <string name="key_logout">key_logout</string>

    <!--  Preference Summaries  -->
    <string name="lbl_select_theme">Select theme</string>

    <!--  Pin Titles  -->
    <string name="lbl_pin_announcement">Announcement</string>
    <string name="lbl_pin_warning">Warning</string>

    <!--  Misc  -->
    <string name="lbl_confirm">Are you sure?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_cancel">Cancel</string>


    <!--  Theme Titles  -->
    <string-array name="theme_option_titles">
        <item>@string/theme_system</item>
        <item>@string/theme_battery</item>
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>

    <string name="theme_system">System Theme</string>
    <string name="theme_battery">Battery Saver</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!--  Theme Values  -->
    <string-array name="theme_option_values">
        <item>-1</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="theme_default">3</string>

    <!--  Username Colors  -->
    <string-array name="username_colors">
        <item>#F01818</item>
        <item>#10A010</item>
        <item>#2424E0</item>
        <item>#F0B000</item>
        <item>#0090C0</item>
        <item>#F010B0</item>
        <item>#E07000</item>
        <item>#A000E0</item>
    </string-array>

    <!--  Connect Links  -->
    <string name="link_website">https://samstenner.com</string>
    <string name="link_email">contact@samstenner.com</string>
    <string name="link_linkedin">https://linkedin.com/in/samstenner</string>
    <string name="link_twitter">https://twitter.com/SamOfStenner</string>
    <string name="link_github">https://github.com/SamStenner</string>

    <!--  Connect Titles  -->
    <string name="lbl_website">Website</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_linkedin">LinkedIn</string>
    <string name="lbl_github">GitHub</string>

    <!--  Email Misc  -->
    <string name="mail_to">mailto:</string>
    <string name="send_to">Send To…</string>

    <!--  About  -->
    <string name="lbl_dev_name">Sam Stenner</string>
    <string name="lbl_dev_desc">Android Enthusiast</string>
    <string name="lbl_credits">Credits</string>
    <string name="lbl_ouch">Ouch!</string>

    <!--  Debug  -->
    <string name="debug_text_body">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="debug_topic">Politics</string>
    <string name="debug_username">John Smith</string>
    <string name="debug_emoji">😂😂😂</string>
    <string name="debug_pin">Announcement</string>

</resources>
