<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <View
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_login">

    </View>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/login_gradient"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/gotham_regular"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scroll_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.elmpool.tallr.widgets.bounce.BounceScrollView
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:ratioForwards="@dimen/scroll_ratio_forwards"
        app:ratioBackwards="@dimen/scroll_ratio_backwards"
        app:decelFactor="@dimen/scroll_decel_factor">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/lbl_sign_in"
                    android:textSize="28sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_google"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/lbl_google"
                    android:textColor="@android:color/primary_text_light"
                    android:fontFamily="@font/google_sans_bold"
                    app:backgroundTint="@android:color/white"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_social_google"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_facebook"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/lbl_facebook"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/google_sans_bold"
                    app:backgroundTint="#1778F2"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_social_facebook"
                    app:iconSize="24dp"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_twitter"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/lbl_twitter"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/google_sans_bold"
                    app:backgroundTint="#00aced"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_social_twitter"
                    app:iconSize="24dp"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_microsoft"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/lbl_microsoft"
                    android:textColor="@android:color/primary_text_light"
                    android:fontFamily="@font/google_sans_bold"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_social_microsoft"
                    app:iconSize="24dp"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_apple"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/lbl_apple"
                    android:textColor="@android:color/primary_text_light"
                    android:fontFamily="@font/google_sans_bold"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_social_apple"
                    app:iconSize="24dp"
                    app:iconTint="@null" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </com.elmpool.tallr.widgets.bounce.BounceScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>